--- a/src/index.css
+++ b/src/index.css
@@ -470,3 +470,44 @@ body, .font-sans {
         background-color: #131314;
     }
 }
+
+/* Custom styles for product list page */
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.slider::-webkit-slider-track {
+    background: #3b3b3b;
+    height: 3px;
+    border-radius: 1.5px;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    background: #ec4899;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid #f3e8ff;
+    cursor: pointer;
+}
+
+.slider::-moz-range-track {
+    background: #3b3b3b;
+    height: 3px;
+    border-radius: 1.5px;
+    border: none;
+}
+
+.slider::-moz-range-thumb {
+    background: #ec4899;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid #f3e8ff;
+    cursor: pointer;
+}
